--- a/odoo.conf
+++ b/odoo.conf
@@ -16,4 +16,4 @@ db_user = odoo
 db_password = odoo
 xmlrpc_port = 8069
 logfile = /var/log/odoo/odoo.log
-admin_passwd = thmpv-77d6f
+admin_passwd = senha
